--- a/src/components/RatingStars/styles.css
+++ b/src/components/RatingStars/styles.css
@@ -1,6 +1,6 @@
 .RatingStars-empty,
 .RatingStars-full {
-  width: 30px;
+  width: 24px;
   font-size: 20px;
 }
 
