--- a/src/components/SearchBar/styles.css
+++ b/src/components/SearchBar/styles.css
@@ -31,6 +31,8 @@
   bottom: 0;
   left: 0;
   right: 0;
+  height: 100%;
+  width: 100%;
   background: none;
   border: none;
   outline: none;
